<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/password_activity_bg"
    android:orientation="vertical"
    tools:context=".Password">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_huge_x"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/success_animation_light" />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/animation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_large_x"
        android:layout_marginTop="@dimen/margin_small_x"
        android:fontFamily="@font/lobster_regular"
        android:text="@string/password"
        android:textColor="@color/password_title"
        android:textSize="@dimen/text_large_x" />

    <TextView
        android:id="@+id/password_result"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_small"
        android:layout_below="@+id/password_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_tine"
        android:textColor="@color/password_result"
        android:textSize="@dimen/text_medium" />

    <TextView
        android:id="@+id/password_strength_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_small"
        android:layout_alignTop="@+id/password_result"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_medium"
        android:gravity="end|center_vertical"
        android:textSize="@dimen/text_small" />

    <View
        android:id="@+id/password_indicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_tine"
        android:layout_below="@+id/password_result"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_medium" />

    <Button
        android:id="@+id/copy_btn"
        android:layout_width="@dimen/width_huge"
        android:layout_height="@dimen/height_medium"
        android:layout_below="@+id/password_result"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_small_x"
        android:layout_marginBottom="@dimen/margin_small_x"
        android:background="@color/copy_btn_bg"
        android:fontFamily="@font/lobster_regular"
        android:text="@string/cope_to_clipboard"
        android:textAllCaps="false"
        android:textColor="@color/copy_btn_tv"
        android:textSize="@dimen/text_large" />

    <ImageView
        android:id="@+id/re_generate"
        android:layout_width="@dimen/height_medium"
        android:layout_height="@dimen/height_medium"
        android:layout_alignTop="@+id/copy_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_tine_x"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@color/refresh_btn_bg"
        android:padding="@dimen/margin_tine"
        android:scaleType="fitXY"
        android:src="@drawable/ic_auto_new_24"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/lowerCase_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/copy_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="@dimen/margin_large"
        app:drawableStartCompat="@drawable/ic_check_24_green" />

    <TextView
        android:id="@+id/lowerCase_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lowerCase_img"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/lowerCase_img"
        android:text="@string/lower_case_letter"
        android:textColor="@color/checked_tv"
        android:textSize="@dimen/letters" />


    <TextView
        android:id="@+id/upperCase_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lowerCase_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="@dimen/margin_medium"
        app:drawableStartCompat="@drawable/ic_check_24_green" />

    <TextView
        android:id="@+id/upperCase_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/upperCase_img"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/upperCase_img"
        android:text="@string/upper_case_letter"
        android:textColor="@color/checked_tv"
        android:textSize="@dimen/letters" />


    <TextView
        android:id="@+id/digit_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upperCase_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="@dimen/margin_medium"
        app:drawableStartCompat="@drawable/ic_check_24_green" />

    <TextView
        android:id="@+id/digit_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/digit_img"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/digit_img"
        android:text="@string/digit"
        android:textColor="@color/checked_tv"
        android:textSize="@dimen/letters" />


    <TextView
        android:id="@+id/symbols_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/digit_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="@dimen/margin_medium"
        app:drawableStartCompat="@drawable/ic_check_24_green" />

    <TextView
        android:id="@+id/symbols_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/symbols_img"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/symbols_img"
        android:text="@string/symbol_tv"
        android:textColor="@color/checked_tv"
        android:textSize="@dimen/letters" />

    <TextView
        android:id="@+id/similar_char_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/symbols_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_check_24_green" />

    <TextView
        android:id="@+id/similar_char_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/similar_char_img"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/similar_char_img"
        android:text="@string/excluded_similar_chars"
        android:textColor="@color/checked_tv"
        android:textSize="@dimen/letters"
        android:visibility="gone" />
</RelativeLayout>